# platform.upstream.libusbg

./: Makefile.am  configure.ac
examples/: Makefile.am  show-gadgets.c
include/usbg/: usbg.h
packaging/: libusbg.spec
src/: usbg.c
tests/: Makefile  Makefile.am  test.c  test.sh
